<resources>
    <string name="app_name">Teluscare</string>
    <string name="signup_text">SIGNUP</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_full_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Password</string>
    <string name="enter_cnf_password">Confirm Password</string>
    <string name="enter_username">User Name</string>
    <string name="enter_ref_code">Refer Code (if Any)</string>
    <string name="txt_register">Register</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_enter_otp">Please enter otp</string>
    <string name="text_otp_size">enter valid otp</string>
    <string name="text_receive_otp">Don\'t Receive an OTP?</string>
    <string name="text_resend">Resend OTP</string>
    <string name="text_veify">Verify OTP</string>
    <string name="text_select_job">Select Job Role</string>
    <string name="text_select_company">Select Company Type</string>
    <string name="text_signup">Don\'t have an account?</string>
    <string name="text_registernow">Register Now</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_read_terms">I have read,understood &amp; agree to the <b>Terms &amp; Conditions</b> of TelusCare</string>

    <!--login-->
    <string name="email_required">Enter Email id!!</string>
    <string name="password_required">Enter Password!!</string>
    <string name="password_length">Password length too short!!</string>
    <string name="invalid_email">Invalid email id!!</string>
    <string name="text_please_wait">Please wait....</string>
    <string name="text_logging_in">Logging in</string>
    <string name="login_header">LOGIN TO YOUR TELUSCARE ACCOUNT</string>
    <string name="text_forgot_password">Forgot your password?</string>
    <string name="text_dont_have_acc">Don\'t have an account? </string>

    <string name="network_error">Please check your internet connection!!</string>

    <!--Forgot password-->
    <string name="sending_email">Sending email</string>

    <string-array name="emirates">
        <item>Select Emirates</item>
        <item>Dubai</item>
        <item>Abu Dhabi</item>
        <item>Al Ain</item>
        <item>Sharjah</item>
        <item>Fujairah</item>
        <item>Ras Al Khaimah</item>
        <item>Ajman</item>
        <item>Umm Al Quwain</item>
    </string-array>

    <string-array name="cleaning_type">
        <item>Select Type of Cleaning</item>
        <item>General Cleaning</item>
        <item>House Keeping</item>
        <item>Baby Sitting</item>
        <item>Deep Cleaning</item>
        <item>Move IN/OUT</item>
        <item>Post Construction</item>
        <item>Pre Construction</item>
        <item>Sofa Cleaning</item>
        <item>Carpet Cleaning</item>
        <item>Curtain Cleaning</item>
        <item>Water Tank</item>
    </string-array>

    <string-array name="weekly">
        <item>Once a week</item>
        <item>Twice a week</item>
        <item>Thrice a week</item>
        <item>Four times a week</item>
        <item>Five times a week</item>
        <item>Six times a week</item>
        <item>Seven times a week</item>
        <item>Once in weekend</item>
    </string-array>

    <string-array name="annual">
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
        <item>4 Month</item>
        <item>5 Month</item>
        <item>6 Month</item>
        <item>7 Month</item>
        <item>8 Month</item>
        <item>9 Month</item>
        <item>10 Month</item>
        <item>11 Month</item>
        <item>12 Month</item>
    </string-array>

    <string-array name="week">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
    </string-array>
</resources>
