<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrationActivity">

    <include layout="@layout/toolbar_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/signup_text"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_light"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_emailid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_text"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_mobno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:fontFamily="@font/poppins_light"
                android:inputType="number"
                android:hint="@string/enter_email_id"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtinput_emailid"
            android:layout_height="wrap_content"
            android:id="@+id/switchtoggle"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSelectHandleLeft="@string/signup_text"
                android:textSelectHandleRight="@string/signup_text"
                android:id="@+id/switchtext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_jobrole"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchtoggle"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtinput_jobrole"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="number"
                android:hint="@string/enter_full_name"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtinput_fullname"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_cnfpswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtinput_password"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_cnfpasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPassword"
                android:hint="@string/enter_cnf_password"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinput_refcode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtinput_cnfpswd"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_refcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="text"
                android:hint="@string/enter_ref_code"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/mob_btn_bg"
        android:text="@string/txt_register"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>